--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ body.noscroll {
   position: fixed;
 }
 
+h1 {
+  margin: 0;
+}
+
 .reveal {
   width: 100vw;
   height: 100vh;
@@ -109,6 +113,13 @@ a:visited {
   src: url("/css/fonts/Druk\ XXCond\ Super.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
+}
+
+@font-face {
+	font-family: 'Zeit-Extralight';
+	src: url('/css/fonts/zeit-extralight.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 
 .druk-cond-super {
@@ -2001,7 +2012,7 @@ footer.bottom {
   }
 
   .caption-photo {
-    font-size: 2vw;
+    font-size: 3vw;
     opacity: 1 !important;
   }
 
@@ -2705,8 +2716,7 @@ svg.question_laura {
   width: 30vw;
   position: absolute;
   border-radius: 07151986%;
-  background-color: #FFB700;
-  background-color: #fdd630;
+  background-color: #652b22;
 
   top: 150px;
   left: 130px;
@@ -2725,6 +2735,16 @@ svg.question_laura {
   left: 70%;
   top: 10%;
 }
+
+/* .anna-vid-mobile {
+  height: calc(49vw - 316px);
+  min-height: calc(20vw - 316px);
+  position: absolute;
+  /* width: auto; */
+  z-index: 2;
+  left: 70%;
+  top: 10%;
+} */
 
 .anna-vid:hover {
   z-index: 3;
